WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229095
[iOS 15] fast/events/touch/ios/long-press-on-link.html is a constant crash
https://bugs.webkit.org/show_bug.cgi?id=229095
Summary
[iOS 15] fast/events/touch/ios/long-press-on-link.html is a constant crash
Wenson Hsieh
Reported
2021-08-13 14:04:26 PDT
rdar://80386326
Attachments
Patch
(16.24 KB, patch)
2021-08-13 14:58 PDT
,
Wenson Hsieh
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Fix tvOS/watchOS builds
(16.25 KB, patch)
2021-08-13 15:13 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2021-08-13 14:58:19 PDT
Comment hidden (obsolete)
Created
attachment 435517
[details]
Patch
Wenson Hsieh
Comment 2
2021-08-13 15:13:04 PDT
Created
attachment 435518
[details]
Fix tvOS/watchOS builds
Wenson Hsieh
Comment 3
2021-08-13 17:29:52 PDT
Comment on
attachment 435518
[details]
Fix tvOS/watchOS builds Thanks for the review!
EWS
Comment 4
2021-08-13 17:47:10 PDT
Committed
r281054
(
240517@main
): <
https://commits.webkit.org/240517@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 435518
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug